--- a/public/templates/newsletter.handlebars
+++ b/public/templates/newsletter.handlebars
@@ -1,4 +1,4 @@
 <div class="newsletter-form"  novalidate="">
-            <input type="email" value="" name="email" class="email" placeholder="Your Email Adress Here ..." required>
-            <button class="btn btn-primary" name="submitButton" type="submit">Subscribe</button>
+            <input type="email" value="" name="email" class="email" placeholder="Your Email Address Here ..." required>
+            <button class="btn btn-primary" name="submitButton" type="submit">{{buttontext}}</button>
 </div>
